# mamolinux-settings

./: README.md  meson.build  test
data/: meson.build
data/mamolinux/: mamolinux-release-upgrade.desktop.in  meson.build  theme-manager-config.cfg
data/mamolinux/cinnamon/: calendar_config.json
data/mamolinux/os-conf/: 10_linux  10_linux_zfs  grub  lsb-release  mamolinux-apt.pref  meson.build  os-release
data/mamolinux/plank/: budgie-control-center.dockitem  budgie-settings.dockitem  io.github.hakandundar34coding.system-monitoring-center.dockitem  meson.build  org.buddiesofbudgie.BudgieDesktopSettings.dockitem  plank.desktop.in
data/mamolinux/synapse/: meson.build
data/schemas/: 10_mamolinux-settings-budgie.gschema.override  10_mamolinux-settings-cinnamon.gschema.override  meson.build  net.launchpad.plank.gschema.xml.in
debian/: changelog  control  copyright  mamolinux-settings-budgie.install  mamolinux-settings-budgie.postrm  mamolinux-settings-cinnamon.install  mamolinux-settings-cinnamon.postinst  mamolinux-settings-cinnamon.postrm  mamolinux-settings-common.install  mamolinux-settings-common.postinst  mamolinux-settings-common.postrm  mamolinux-settings-gnome.install  mamolinux-settings-gnome.postinst  postinst  postrm  rules
etc/lightdm/: slick-greeter.conf
etc/mamolinux/: 10_linux  anydesk-source  brave-browser-source  grub  intel-compilers-source  lsb-release  ms-apps-source  os-release
etc/mamolinux/.cinnamon/configs/calendar@cinnamon.org/: 13.json
etc/mamolinux/.config/plank/dock1/launchers/: snap-store_snap-store.dockitem
etc/mamolinux/.config/synapse/: config.json
etc/mamolinux/.config/theme-manager/: config.cfg
etc/skel/.cinnamon/configs/calendar@cinnamon.org/: 13.json
etc/skel/.config/plank/dock1/launchers/: system-monitoring-center.dockitem
etc/xdg/autostart/: plank.desktop  redshift-gtk.desktop  synapse.desktop
po/: POTFILES  mamolinux-settings.pot
src/: mamolinux-release-upgrader  mamolinux_settings_setup  meson.build
usr/share/applications/: mamolinux-release-upgrade.desktop
usr/share/glib-2.0/schemas/: 10_mamolinux-settings-cinnamon.gschema.override  10_mamolinux-settings-gnome.gschema.override  10_mamolinux-settings.gschema.override
usr/share/nemo/actions/: remote_terminal.nemo_action  remote_terminal.py
