subdir('os-conf')
subdir('plank')
subdir('synapse')
subdir('third-party')

desktop_file = i18n.merge_file(
        input: 'mamolinux-release-upgrade.desktop.in',
       output: 'mamolinux-release-upgrade.desktop',
         type: 'desktop',
       po_dir: '../../po',
      install: true,
  install_dir: desktop_dir
)
